# webfilecast

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
webfilecast/: __init__.py  logger.py
webfilecast/static/: main.css  main.html  main.js
