[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webfilecast"
version = "1.1.3"
description = "Webfrontend to cast local videos to your chromecast"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Johannes Paul", email = "vanadinit@quantentunnel.de"}
]
keywords = ["Chromecast", "video", "local", "movie", "terminalcast"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "terminalcast>=1.2.2",
    "Flask",
    "redis",
    "flask_socketio",
    "filetype>=1.0.0",
    "rq",
]

[project.urls]
Homepage = "https://github.com/vanadinit/webfilecast"

[project.scripts]
webfilecast = "webfilecast:app"

[project.optional-dependencies]
deployment = ["gunicorn", "eventlet"]
